# Violinisticly

./: .gitignore  CMakeLists.txt  README.md  basicShader.fs  basicShader.vs
scripts/arduino/: arduino_uno.cmake
src/arduino/: I2Cdev.cpp  crc16.cpp  crc16.h  main.cpp
src/go/: main.go
src/go/api/: api.go  stream.go
src/go/input/: accelgyro.go  serial.go
src/go/opengl/: mesh.go  objet.go  shader.go  texture.go  transform.go  window.go
src/jack/: CMakeLists.txt  README.md  main.cpp  main.go  manager.go  view.go
src/jack/client/: client.go
src/jack/graphs/: graph.go  scene.go  spectrogram.go
src/web/: index.html
src/web/js/: stream.js
